Fix navigation underline to use masthead color with better visibility

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -245,9 +245,9 @@
         left: 0;
         bottom: 0;
         height: 3px;
-        background: currentColor;
+        background: var(--global-masthead-link-color);
         width: 100%;
-        opacity: 1;
+        opacity: 0.9;
         -webkit-transition: $global-transition;
         transition: $global-transition;
         -webkit-transform: scaleX(0);
@@ -256,6 +256,7 @@
       }
 
       &:hover:before {
+        opacity: 1;
         -webkit-transform: scaleX(1);
             -ms-transform: scaleX(1);
                 transform: scaleX(1); /* reveal*/
